# base_estimation

./: CMakeLists.txt  README.md  package.xml
bindings/python/: CMakeLists.txt  pyBaseEstimation.cpp
cartesio/: CMakeLists.txt  cartesio_rt.cpp  cartesio_rt.h
config/: centauro_base_estimation.stack  centauro_base_estimation.yaml  centauro_params.yaml  centauro_wheeled_base_estimation.stack  cogimon_base_estimation.stack  cogimon_base_estimation.yaml  cogimon_inverse_dynamics.stack
include/base_estimation/: base_estimation.h  contact_estimation.h  contact_viz.h  vertex_force_optimizer.h
launch/: centauro_base_estimation.launch  centauro_wheeled_base_estimation.launch  cogimon_base_estimation.launch  cogimon_base_estimation.launch.orig  cogimon_ik.launch  cogimon_ik.stack
msg/: ContactStatus.msg  ContactWrenches.msg  ContactsStatus.msg  ContactsWrench.msg
pj/: base_pose_gt.xml  base_pose_twist.xml
python/: Constraint.py  another_trial.py  ci_solver.py  class_try.py  com_vel_est.py  homing.py  horizon.py  main.py  plot_step.py  run_model.py  send_force_gazebo.py  static_wpg.py  step.py  step_interpolator.py  step_solver.py  step_top.py  stepper.py  trial.py  wpg.py
python/old_stuff/: ci_solver_old.py  comparer.py  horizon_old.py  step.py
python/old_stuff/deprecated/: static_wpg.py  step_old.py  wpg_old.py
rviz/: default.rviz
scripts/: plot.py  plots_step.m
src/: base_estimation.cpp  base_estimation.h  base_estimation_node.cpp  base_estimation_node.cpp.orig  base_estimation_plugin.cpp  base_estimation_plugin.h  common.h  contact_estimation.cpp  contact_viz.cpp  gazebo_tf_publisher.cpp  vertex_force_optimizer.cpp
